[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/enemyDeathFx.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/enemyDeathFx.png" type="Texture" id=2]
[ext_resource path="res://resources/sprites/smallCircle.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0.315068, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.101961, 0.109804, 0.172549, 0 )

[sub_resource type="GradientTexture" id=22]
gradient = SubResource( 21 )

[sub_resource type="ParticlesMaterial" id=23]
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, -98, 0 )
initial_velocity = 8.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.1
scale_random = 1.0
color = Color( 0.101961, 0.109804, 0.172549, 1 )
color_ramp = SubResource( 22 )

[node name="enemyDeathFx" type="AnimatedSprite"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
scale = Vector2( 2, 2 )
frames = SubResource( 20 )
script = ExtResource( 1 )

[node name="particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = -1
emitting = false
amount = 32
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 23 )
texture = ExtResource( 3 )

[connection signal="animation_finished" from="." to="." method="_on_enemyDeathFx_animation_finished"]
[connection signal="frame_changed" from="." to="." method="_on_enemyDeathFx_frame_changed"]
